# lupa

./: README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  wheels.yml
lupa/tests/: test.py
